--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 GOOGLE_API_KEY = 'AIzaSyDoNF1SOBdEQhNJqQ9M-xlE2X1N4M0XEFY'
 GOOGLE_APPLICATION_CREDENTIALS = 'credentials.json'
+NEWS_API_KEY = '85fb755af35f41fbb3b79921facffa5f'
+STOCK_API_KEY = '8pAMt7yDR03RyrywzLsMZ7gevHSC0GAU' 
+CURRENCY_API_KEY = 'fa89393965414a19b5e1a50755259b6c'
+WEATHER_API_KEY = "049048adef5f0ac4aa3012b93db79b78"
